[package]
name = "unsafe-box"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = """
Store multiple raw pointers to the same object in a slightly safer way.
"""
documentation = "https://docs.rs/unsafe-box/"
repository = "https://github.com/jonas-schievink/unsafe-box.git"
keywords = ["unsafe", "pointer", "shared"]
categories = ["memory-management", "rust-patterns"]
readme = "README.md"
license = "CC0-1.0"

[dependencies]

[dev-dependencies]
# TODO: rollback to upstream when https://github.com/mgeisler/version-sync/pull/41 is merged
version-sync = { git = "https://github.com/jonas-schievink/version-sync.git", rev = "d25c08a" }


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'unsafe-box = "[a-z0-9\\.-]+"'
replace = 'unsafe-box = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/unsafe-box/[a-z0-9\\.-]+"
replace = "https://docs.rs/unsafe-box/{{version}}"
